kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  flask-vue-k8s
  labels:
    name: tutorial
