kubernetes/flask-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask
  namespace: flask-vue-k8s
  labels:
    name: flask
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: vihaton/flask-kubernetes:latest
      restartPolicy: Always
