kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: flask-vue-k8s
  labels:
    service: flask
spec:
  selector:
    app: flask
  ports:
  - port: 5000
    targetPort: 5000
