kubernetes/vue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue
  namespace: flask-vue-k8s
  labels:
    service: vue
spec:
  selector:
    app: vue
  ports:
  - port: 8080
    targetPort: 8080
