kubernetes/minikube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  namespace: flask-vue-k8s
  annotations:
spec:
  rules:
  - host: hei.mualima
    http:
      paths:
      - path: /
        backend:
          serviceName: vue
          servicePort: 8080
      - path: /books
        backend:
          serviceName: flask
          servicePort: 5000
